# Kengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml  msvc.yml
android-project/: .gitignore  gradle.properties  settings.gradle
android-project/app/: build.gradle
android-project/kengine/: build.gradle
cmake/: Kengine.cmake
demo-game/: CMakeLists.txt  scene-data.kpkg
demo-game/android/: gradle.properties  settings.gradle
demo-game/android/app/: build.gradle
demo-game/android/app/src/androidTest/java/com/kostahka/kenginedemogame/: ExampleInstrumentedTest.kt
demo-game/android/app/src/main/: AndroidManifest.xml
demo-game/android/app/src/main/assets/: scene-data.kpkg
demo-game/android/app/src/main/assets/resources/textures/: simpleSpace.kpkg
demo-game/android/app/src/main/assets/scenes/: demo-main.ksc  player-ship.ksc
demo-game/android/app/src/main/assets/shaders/: square.fs  square.vs
demo-game/android/app/src/main/java/com/kostahka/kenginedemogame/: MainActivity.kt
demo-game/android/app/src/main/res/values/: strings.xml  themes.xml
demo-game/android/app/src/test/java/com/kostahka/kenginedemogame/: ExampleUnitTest.kt
demo-game/android/gradle/wrapper/: gradle-wrapper.properties
demo-game/assets/: scene-data.kpkg
demo-game/assets/resources/animations/: default-animation.kpkg
demo-game/assets/resources/audio/: space-soundtrack.kpkg
demo-game/assets/resources/fonts/: default-font.kpkg
demo-game/assets/resources/materials/: default-gui.kpkg  default.kpkg  simpleSpace-sprite-material.kpkg
demo-game/assets/resources/textures/: simpleSpace.kpkg
demo-game/assets/scenes/: demo-main.ksc  player-ship.ksc
demo-game/assets/shaders/: square.vs
demo-game/include/: demo-game.hxx  player-controller-component.hxx  player-controller-system.hxx
demo-game/src/: demo-game.cxx  player-controller-component.cxx  player-controller-system.cxx
editor/: CMakeLists.txt
editor/include/: assets-browser.hxx  editor.hxx  game-properties-wnd.hxx  game-wnd.hxx  log-wnd.hxx  object-properties-wnd.hxx  resource-wnd.hxx  scene-objects-wnd.hxx  scene-properties-wnd.hxx  toolbar-wnd.hxx
editor/include/imgui-filebrowser/: imfilebrowser.h
editor/src/: assets-browser.cxx  editor.cxx  game-properties-wnd.cxx  game-wnd.cxx  log-wnd.cxx  object-properties-wnd.cxx  resource-wnd.cxx  scene-objects-wnd.cxx  scene-properties-wnd.cxx  toolbar-wnd.cxx
include/Kengine/: engine.hxx  file-last-modify-listener.hxx  game.hxx  main.hxx
include/Kengine/audio/: audio.hxx  specs.hxx
include/Kengine/components/: animation-component.hxx  audio-component.hxx  camera-component.hxx  component-container.hxx  component-info.hxx  component-types.hxx  component.hxx  custom-component.hxx  gui-component.hxx  physics-component.hxx  rect-transform-component.hxx  render-component.hxx  sprite-component.hxx  text-component.hxx  transform-component.hxx
include/Kengine/configuration/: configuration-file.hxx  configuration.hxx
include/Kengine/event/: custom-event.hxx  event.hxx  gui-event.hxx  user-events.hxx
include/Kengine/game-objects/: component-types.hxx  component.hxx  game-object.hxx
include/Kengine/graphics/: b2GLDraw.hxx  camera.hxx  draw-primitives.hxx  element-buffer.hxx  framebuffer.hxx  graphics.hxx  gui-draw-debug.hxx  raw-vertex-buffer.hxx  render-manager.hxx  render-packet.hxx  render-pass.hxx  renderbuffer.hxx  shader.hxx  texture-common.hxx  texture.hxx  uniformbuffer.hxx  vertex-array.hxx  (+1 more)
src/: CMakeLists.txt  engine.cxx  engine.hxx  file-last-modify-listener.cxx  game.cxx  handle-file-modify.hxx  transform3d.cxx
src/audio/: audio-mix.cxx  audio-mix.hxx  audio.cxx  audio.hxx
src/components/: animation-component.cxx  audio-component.cxx  camera-component.cxx  component-container.cxx  component.cxx  custom-component.cxx  custom-component.hxx  gui-component.cxx  physics-component.cxx  rect-transform-component.cxx  render-component.cxx  sprite-component.cxx  text-component.cxx  transform-component.cxx
src/configuration/: configuration-file.cxx  configuration.cxx
src/event/: custom-event.cxx  event-engine.hxx  event.cxx  event.hxx  handle-user-event.hxx  user-events.cxx
src/game-objects/: component.cxx  game-object.cxx  physics-component.cxx
src/graphics/: b2GLDraw.cxx  camera.cxx  draw-primitives.cxx  element-buffer.cxx  framebuffer.cxx  graphics.cxx  graphics.hxx  gui-draw-debug.cxx  raw-vertex-buffer.cxx  render-manager.cxx  render-manager.hxx  render-packet.cxx  render-pass.cxx  renderbuffer.cxx  shader.cxx  texture-common.cxx  texture.cxx  uniformbuffer.cxx  vertex-array.cxx
src/graphics/shader-utils/: shader-type.cxx  shader-utils.cxx
src/helpers/: hash.cxx  spin-lock.cxx
src/imgui/: imgui-edit.cxx  imgui-editable.cxx  imgui.cxx  imgui.hxx
src/imgui-impl/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h
src/io/: file-manager.cxx  file-manager.hxx  input.cxx
src/lib/: lib.cxx
src/log/: log.cxx  log.hxx
src/opengl/: opengl-debug.cxx  opengl-debug.hxx  opengl.cxx  opengl.hxx
src/physics/: physics.cxx  physics.hxx
src/render/: animation.cxx  b2GLDraw.cxx  draw-primitives.cxx  engine-resources.cxx  opengl-error.cxx  opengl-error.hxx  picopng.hxx  shader-program.cxx  sprite.cxx  texture.cxx  vertex-array-object.cxx
src/resources/: animation-resource.cxx  audio-resource.cxx  engine-resources.cxx  engine-resources.hxx  font-material-resource.cxx  font-resource.cxx  framebuffer-resource.cxx  gui-material-resource.cxx  material-resource.cxx  picopng.hxx  renderbuffer-resource.cxx  resource-link.cxx  resource-manager.cxx  resource.cxx  shader-resource.cxx  sprite-material-resource.cxx  texture-resource.cxx
src/scene/: prefab.cxx  scene-link.cxx  scene-manager.cxx  scene-manager.hxx  scene.cxx
src/serialization/: archive.cxx
src/string/: string-id.cxx
src/system/: audio-system.cxx  graphics-system.cxx  gui-system.cxx  physics-system.cxx  system.cxx
src/window/: display.cxx  display.hxx  window.cxx  window.hxx
(+63 files in other folders)
